fix: align body

--- a/main.css
+++ b/main.css
@@ -23,12 +23,10 @@
 
 body {
 	scroll-behavior: smooth;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 }
 
 .body {
+	margin: 0 auto;
 	max-width: 480px;
 }
 
